# rec_separated

./: .gitignore  CMakeLists - копия.txt  CMakeLists.txt  Readme.md  cmd1.exe.lnk  vars.bat
Checker/: CMakeLists.txt  REC_Reader.cpp  REC_reader.aps  REC_reader.rc  Reader.cpp  Reader.h  resource.h
Codec/: CMakeLists.txt  codec.cpp  codec.h  my_time.cpp  my_time.h
Console_db_editor/: CMakeLists.txt  main.cpp
Database/: CMakeLists.txt  Database.cpp  Database.h
Examen/: CMakeLists.txt  Examination.cpp  Examination.h  Questioner.rc  questioner.cpp  resource.h  runme.bat
Settings/: CMakeLists.txt  Settings.cpp  Settings.h
Utils/: utils.h
resource/: Questioner.rc  db.rec  db123.rec  filo.txt  in.txt  settings.txt  settings1.txt  todo.txt
Комплекс тестирования/: Инструкция.txt
Комплекс тестирования/Учителю/Генератор базы/: in.txt  settings.txt
